# aether-seeder

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/seeder-agent/: Cargo.toml
crates/seeder-agent/src/: lib.rs
crates/seeder-common/: Cargo.toml
crates/seeder-common/src/: lib.rs
crates/seeder-source-arxiv/: Cargo.toml
crates/seeder-source-arxiv-recent/: Cargo.toml
crates/seeder-source-arxiv-recent/src/: lib.rs
crates/seeder-source-arxiv/src/: lib.rs  topics.rs
crates/seeder-source-grokipedia/: Cargo.toml
crates/seeder-source-grokipedia/src/: lib.rs  topics.rs
crates/seeder-source-gutenberg/: Cargo.toml
crates/seeder-source-gutenberg/src/: lib.rs
crates/seeder-source-huggingface/: Cargo.toml
crates/seeder-source-huggingface/src/: lib.rs
crates/seeder-source-stackexchange/: Cargo.toml
crates/seeder-source-stackexchange/src/: lib.rs
crates/seeder-source-wikipedia/: Cargo.toml
crates/seeder-source-wikipedia/src/: lib.rs  topics.rs
docs/: DESIGN.md
