[workspace]
resolver = "2"
members = [
    "crates/seeder-common",
    "crates/seeder-agent",
    "crates/seeder-source-grokipedia",
    "bin/aether-seeder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Qubitcoin / QuantumAI-Blockchain"]
repository = "https://github.com/QuantumAI-Blockchain/aether-seeder"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
async-trait = "0.1"
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
