[package]
name = "seeder-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Single seeder worker — pulls batches from a shared KnowledgeSource, posts to /aether/knowledge/sync, retries on transient errors."

[dependencies]
seeder-common = { path = "../seeder-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
