[package]
name = "seeder-source-grokipedia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "KnowledgeSource implementation that pulls articles from grokipedia.com, strips HTML, chunks at sentence boundaries, and routes them into Sephirot cognitive domains."

[dependencies]
seeder-common = { path = "../seeder-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
