[package]
name = "seeder-source-huggingface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "KnowledgeSource implementation that pulls clean web text from HuggingFace's FineWeb-edu dataset via the datasets-server rows API and chunks each row's text into Sephirot-tagged seed nodes."

[dependencies]
seeder-common = { path = "../seeder-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = "0.9"
