[package]
name = "seeder-source-stackexchange"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "KnowledgeSource implementation that pulls top-voted questions across multiple Stack Exchange sites via the public API, strips HTML, and chunks title+body into Sephirot-tagged seed nodes."

[dependencies]
seeder-common = { path = "../seeder-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
